# KAST

./: CMakeLists.txt  README.md  app_test.sh  common.h  contributors.txt  distance.cpp  distance.h  distance_tests.h  kast.cpp  kast_tests.cpp  pairwise.h  search.h  utils.cpp  utils.h  utils_tests.h
util/: num_diff.cpp
